feature: AudiobookShelf integration