@@ -6,23 +6,16 @@ import lombok.RequiredArgsConstructor;
 import org.rickosborne.romance.db.model.SchemaAttribute;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.rickosborne.romance.util.StringStuff.CRLF;
 
 @Builder
-@Getter
-@RequiredArgsConstructor
-public class Diff<M> {
-    private final M after;
-    private final M before;
-    private final List<AttributeDiff<M, ?>> changes;
-
+public record Diff<M>(M after, M before, List<AttributeDiff<M, ?>> changes) {
     public String asDiffLines() {
         if (changes == null || changes.isEmpty()) {
             return null;
         }
-        final List<AttributeDiff<M, ?>> printable = changes.stream().filter(c -> c.operation != Operation.Keep).collect(Collectors.toList());
+        final List<AttributeDiff<M, ?>> printable = changes.stream().filter(c -> c.operation != Operation.Keep).toList();
         if (printable.isEmpty()) {
             return null;
         }
@@ -54,18 +47,16 @@ public class Diff<M> {
     }
 
     @Builder
-    @Getter
-    @RequiredArgsConstructor
-    public static class AttributeDiff<M, A> {
-        private final M afterModel;
-        private final A afterValue;
-        private final SchemaAttribute<M, A> attribute;
-        private final Class<A> attributeType;
-        private final M beforeModel;
-        private final A beforeValue;
-        private final Class<M> modelType;
-        private final Operation operation;
-
+    public record AttributeDiff<M, A>(
+        M afterModel,
+        A afterValue,
+        SchemaAttribute<M, A> attribute,
+        Class<A> attributeType,
+        M beforeModel,
+        A beforeValue,
+        Class<M> modelType,
+        Operation operation
+    ) {
         public String asDiffLines() {
             if (operation == Operation.Keep) {
                 return null;
